--- a/conry/linkedlist.html
+++ b/conry/linkedlist.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>D3</title>
-    <script src="d3.min.js"></script>
+			<script src="https://d3js.org/d3.v4.min.js"></script>
 		<style>
 
 		</style>
