--- a/llanos/KL_divergence/index.html
+++ b/llanos/KL_divergence/index.html
@@ -7,6 +7,7 @@
   <title>KL Divergence</title>
   <meta name="description" content="">
 	<script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="utils.js"></script>
   <style type="text/css">
     body {
       font: 10px sans-serif;
@@ -59,9 +60,7 @@
   </style>
 </head>
 
-<body>
-
-</body>
+<body> </body>
 
 <script type="text/javascript">
   var numPoints = 1000;
@@ -76,57 +75,6 @@
   var domain = linspace(domain_start, domain_end, numPoints);
   var p = sumArrays(gaussianPDF(domain, p1_mean, p1_std), gaussianPDF(domain, p2_mean, p2_std));
   var q = gaussianPDF(domain, q_mean, q_std);
-
-  function linspace(start, stop, numPoints){
-    var delta = (stop - start)/(numPoints-1)
-    var samples = []
-    for (var i = 0; i < numPoints; i++){
-      samples.push(start + i*delta); 
-    }
-    return samples;
-  }
-
-  function gaussianPDF(x, mean, std) {
-    var gaussianConstant = 1 / Math.sqrt(2 * Math.PI);
-    if (Array.isArray(x)){
-      var numPoints = x.length;
-      var pdf = [];
-      for (var i = 0; i < numPoints; i++){
-        var exponent = (x[i] - mean) / std;
-        pdf.push(gaussianConstant * Math.exp(-.5 * exponent * exponent) / std); 
-      }
-      return pdf;
-    } else {
-      var exponent = (x - mean) / std;
-      return gaussianConstant * Math.exp(-.5 * exponent * exponent) / std;
-    }
-  }
-
-  function klDiv(p, q) {
-    if (p.length != q.length) {
-      return 0;
-    }
-    var numPoints = p.length;
-    var kl = 0;
-    for (var i = 0; i < numPoints; i++) {
-      kl = kl + p[i] * Math.log(p[i]/q[i])
-    }
-    return kl;
-  }
-  
-  function sumArrays(a, b) {
-    
-    if (a.length != b.length) {
-      return 0;
-    }
-
-    var numPoints = a.length;
-    var sum = [];
-    for (var i = 0; i < numPoints; i++) {
-      sum.push(a[i] + b[i]);
-    }
-    return sum;
-  }
  
   function update() {
     q = gaussianPDF(domain, q_mean, q_std);
